tests/baselines/reference/scopeCheckExtendedClassInsideStaticMethod1.errors.txt
tests/cases/compiler/scopeCheckExtendedClassInsideStaticMethod1.ts(4,7): error TS2304: Cannot find name 'v'.
tests/cases/compiler/scopeCheckExtendedClassInsideStaticMethod1.ts(5,12): error TS2339: Property 'p' does not exist on type 'typeof D'.
tests/cases/compiler/scopeCheckExtendedClassInsideStaticMethod1.ts(6,7): error TS2662: Cannot find name 's'. Did you mean the static member 'D.s'?


==== tests/cases/compiler/scopeCheckExtendedClassInsideStaticMethod1.ts (3 errors) ====
    class C { private v; public p; static s; }
    class D extends C {
       static c() {
          v = 1;
          ~
!!! error TS2304: Cannot find name 'v'.
          this.p = 1;
               ~
!!! error TS2339: Property 'p' does not exist on type 'typeof D'.
          s = 1;
          ~
!!! error TS2662: Cannot find name 's'. Did you mean the static member 'D.s'?
       }
    }